[package]
name = "types"
version = "0.1.0"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = "2018"

[dependencies]
bls = { path = "../bls" }
boolean-bitfield = { path = "../boolean-bitfield" }
ethereum-types = "0.4.0"
hashing = { path = "../hashing" }
honey-badger-split =  { path = "../honey-badger-split" }
log = "0.4"
rayon = "1.0"
rand = "0.5.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "^2.2.3"
ssz = { path = "../ssz" }
vec_shuffle = { path = "../vec_shuffle" }
